name:                transpose
version:             0.1.0.0
synopsis:            transpose Project...
homepage:            http://github.com/sordina/transpose
license:             MIT
license-file:        LICENSE
author:              Lyndon Maydwell
maintainer:          maydwell@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable transpose
  main-is:             Main.hs
  build-depends:       base -any
  hs-source-dirs:      src
  default-language:    Haskell2010